# nodepulse-connect-releases

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  generated-key.txt  index.html  node-pulse.code-workspace  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: build.yml
scripts/: gen_connect_manifest.py  gen_icons.py
src/: App.svelte  app.css
src-tauri/: .gitignore  Cargo.toml  tauri-sidecar-extra.json  tauri-windows-extra.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh  kill-existing.nsi
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: identity.rs  mod.rs  storage.rs  tailscale.rs
src/lib/api/: nodepulse.js
src/lib/components/: ClusterSelect.svelte  Connected.svelte  Connecting.svelte  Setup.svelte  StartupCheck.svelte  TailscaleSetup.svelte  UpdateNotice.svelte
src/lib/stores/: authStore.svelte.js  connectionStore.svelte.js
