[package]
name = "nodepulse-connect"
version = "0.1.0"
description = "NodePulse Connect — Join Headscale mesh from personal device"
authors = ["Ussi NodePulse Team"]
edition = "2021"

[lib]
name = "nodepulse_connect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Linux only: runtime Tailscale download + extraction
[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
flate2 = "1"
tar = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
